apps/ollama/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ollama
  labels:
    name: ollama
    pod-security.kubernetes.io/enforce: privileged
    pod-security.kubernetes.io/audit: privileged
    pod-security.kubernetes.io/warn: privileged
