apps/ollama/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ollama-api
  namespace: ollama
  annotations:
    lbipam.cilium.io/sharing-key: "lan-shared"
    lbipam.cilium.io/sharing-cross-namespace: "*"
    lbipam.cilium.io/ips: "192.168.1.120"
spec:
  type: LoadBalancer
  selector:
    app: ollama
  ports:
    - name: http
      port: 11434
      protocol: TCP
